--- a/nodeapp/package.json
+++ b/nodeapp/package.json
@@ -4,14 +4,15 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "nodemon": "^3.1.9"
   },
   "devDependencies": {
     "mocha": "9.1.1",
     "supertest": "6.1.6"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon -L index.js",
     "test": "mocha ./test/test.js"
   }
 }
